Landing page--correción del pie | creación de agora-frameWork

--- a/agora_landing.html
+++ b/agora_landing.html
@@ -38,6 +38,8 @@
   <link href="css/normalize.css" rel="stylesheet"/>
   <!--Landing Page-->
   <link rel="stylesheet" href="css/agora-landingPage.css"/>
+  <!--Framework Agora-->
+  <link rel="stylesheet" href="css/agora-frameWork.css"/>
 </head>
 <body>
   <!--Barra de Navegación-->
