Plataforma--Estilos a Tarjeta | Creación de agora--frameWork.css

--- a/agora_landing.html
+++ b/agora_landing.html
@@ -58,7 +58,7 @@
         <li><a href="#equipo"><i class="icon-equipo icono--menu"></i></a></li>
       </ul>
     </div>
-    <div class="menuNavegacionVertical__back"><a href="#inicio"><i class="icon-back icono--back" src="images/back.svg"></i></a></div>
+    <div class="menuNavegacionVertical__back"><a href="#inicio"><i class="icon-back icono--back"></i></a></div>
   </nav>
   <nav class="menuNavegacionApaisado">
     <div><i class="icon-a"></i></div>
