--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
   <link rel="stylesheet" href="css/agora_style.css"/>
   <!--Style Modal-->
   <link rel="stylesheet" href="css/modal.css"/>
+  <!--Agora FrameWork-->
+  <link rel="stylesheet" href="css/agora-frameWork.css"/>
 </head>
 <body>
   <!--Barra de Navegación-->
@@ -56,7 +58,7 @@
         <li><a href="#"><i class="icon-a icono--menu"></i></a></li>
       </ul>
     </div>
-    <div class="menuNavegacionVertical__back"><a href="#inicio"><img class="icono--back" src="images/back.svg"/></a></div>
+    <div class="menuNavegacionVertical__back"><a href="#inicio"><i class="icon-back icono--back"></i></a></div>
   </nav>
   <nav class="menuNavegacionApaisado">
     <div><i class="icon-a"></i></div>
@@ -69,167 +71,16 @@
     <div class="columnaTarjetas">
       <!--Tarjeta-->
       <div class="tarjeta">
-        <div class="tarjeta__imagen"><img class="imagen-fluida" src="images/1.jpg"/></div>
-        <div class="tarjeta__informacion">
-          <h5 class="tituloEvento">Catrinas </h5>
-          <p class="fechaEvento">29 Oct 2016 a las 19:00 hrs</p>
-          <p class="sedeEvento">La Pergola</p><small class="tipoEvento">Exposición</small>
-          <div class="organizadorEvento"><img class="organizadorEvento__imgPerfil imagen-fluida" src="images/luna.png"/>
-            <div class="organizadorEvento__nombre">Aula Clavijero</div>
-          </div>
-        </div>
-      </div>
-      <div class="tarjeta">
-        <div class="tarjeta__imagen"><img class="imagen-fluida" src="images/2.png"/></div>
-        <div class="tarjeta__informacion">
-          <h5 class="tituloEvento">Catrinas</h5>
-          <p class="fechaEvento">29 Oct 2016 a las 19:00 hrs</p>
-          <p class="sedeEvento">La Pergola</p><small class="tipoEvento">Exposición</small>
-          <div class="organizadorEvento"><img class="organizadorEvento__imgPerfil imagen-fluida" src="images/luna.png"/>
-            <div class="organizadorEvento__nombre">Aula Clavijero</div>
-          </div>
-        </div>
-      </div>
-      <div class="tarjeta">
-        <div class="tarjeta__imagen"><img class="imagen-fluida" src="images/3.jpg"/></div>
-        <div class="tarjeta__informacion">
-          <h5 class="tituloEvento">Catrinas</h5>
-          <p class="fechaEvento">29 Oct 2016 a las 19:00 hrs</p>
-          <p class="sedeEvento">La Pergola</p><small class="tipoEvento">Exposición</small>
-          <div class="organizadorEvento"><img class="organizadorEvento__imgPerfil imagen-fluida" src="images/luna.png"/>
-            <div class="organizadorEvento__nombre">Aula Clavijero</div>
-          </div>
-        </div>
-      </div>
-      <div class="tarjeta">
-        <div class="tarjeta__imagen"><img class="imagen-fluida" src="images/4.jpg"/></div>
-        <div class="tarjeta__informacion">
-          <h5 class="tituloEvento">Catrinas</h5>
-          <p class="fechaEvento">29 Oct 2016 a las 19:00 hrs</p>
-          <p class="sedeEvento">La Pergola</p><small class="tipoEvento">Exposición</small>
-          <div class="organizadorEvento"><img class="organizadorEvento__imgPerfil imagen-fluida" src="images/luna.png"/>
-            <div class="organizadorEvento__nombre">Aula Clavijero</div>
-          </div>
-        </div>
-      </div>
-      <div class="tarjeta">
-        <div class="tarjeta__imagen"><img class="imagen-fluida" src="images/5.jpg"/></div>
-        <div class="tarjeta__informacion">
-          <h5 class="tituloEvento">Catrinas</h5>
-          <p class="fechaEvento">29 Oct 2016 a las 19:00 hrs</p>
-          <p class="sedeEvento">La Pergola</p><small class="tipoEvento">Exposición</small>
-          <div class="organizadorEvento"><img class="organizadorEvento__imgPerfil imagen-fluida" src="images/luna.png"/>
-            <div class="organizadorEvento__nombre">Aula Clavijero</div>
-          </div>
-        </div>
-      </div>
-      <div class="tarjeta">
-        <div class="tarjeta__imagen"><img class="imagen-fluida" src="images/1.jpg"/></div>
-        <div class="tarjeta__informacion">
-          <h5 class="tituloEvento">Catrinas </h5>
-          <p class="fechaEvento">29 Oct 2016 a las 19:00 hrs</p>
-          <p class="sedeEvento">La Pergola</p><small class="tipoEvento">Exposición</small>
-          <div class="organizadorEvento"><img class="organizadorEvento__imgPerfil imagen-fluida" src="images/luna.png"/>
-            <div class="organizadorEvento__nombre">Aula Clavijero</div>
-          </div>
-        </div>
-      </div>
-      <div class="tarjeta">
-        <div class="tarjeta__imagen"><img class="imagen-fluida" src="images/2.png"/></div>
-        <div class="tarjeta__informacion">
-          <h5 class="tituloEvento">Catrinas</h5>
-          <p class="fechaEvento">29 Oct 2016 a las 19:00 hrs</p>
-          <p class="sedeEvento">La Pergola</p><small class="tipoEvento">Exposición</small>
-          <div class="organizadorEvento"><img class="organizadorEvento__imgPerfil imagen-fluida" src="images/luna.png"/>
-            <div class="organizadorEvento__nombre">Aula Clavijero</div>
-          </div>
-        </div>
-      </div>
-      <div class="tarjeta">
-        <div class="tarjeta__imagen"><img class="imagen-fluida" src="images/3.jpg"/></div>
-        <div class="tarjeta__informacion">
-          <h5 class="tituloEvento">Catrinas</h5>
-          <p class="fechaEvento">29 Oct 2016 a las 19:00 hrs</p>
-          <p class="sedeEvento">La Pergola</p><small class="tipoEvento">Exposición</small>
-          <div class="organizadorEvento"><img class="organizadorEvento__imgPerfil imagen-fluida" src="images/luna.png"/>
-            <div class="organizadorEvento__nombre">Aula Clavijero</div>
-          </div>
-        </div>
-      </div>
-      <div class="tarjeta">
-        <div class="tarjeta__imagen"><img class="imagen-fluida" src="images/4.jpg"/></div>
-        <div class="tarjeta__informacion">
-          <h5 class="tituloEvento">Catrinas</h5>
-          <p class="fechaEvento">29 Oct 2016 a las 19:00 hrs</p>
-          <p class="sedeEvento">La Pergola</p><small class="tipoEvento">Exposición</small>
-          <div class="organizadorEvento"><img class="organizadorEvento__imgPerfil imagen-fluida" src="images/luna.png"/>
-            <div class="organizadorEvento__nombre">Aula Clavijero</div>
-          </div>
-        </div>
-      </div>
-      <div class="tarjeta">
-        <div class="tarjeta__imagen"><img class="imagen-fluida" src="images/5.jpg"/></div>
-        <div class="tarjeta__informacion">
-          <h5 class="tituloEvento">Catrinas</h5>
-          <p class="fechaEvento">29 Oct 2016 a las 19:00 hrs</p>
-          <p class="sedeEvento">La Pergola</p><small class="tipoEvento">Exposición</small>
-          <div class="organizadorEvento"><img class="organizadorEvento__imgPerfil imagen-fluida" src="images/luna.png"/>
-            <div class="organizadorEvento__nombre">Aula Clavijero</div>
-          </div>
-        </div>
-      </div>
-      <div class="tarjeta">
-        <div class="tarjeta__imagen"><img class="imagen-fluida" src="images/1.jpg"/></div>
-        <div class="tarjeta__informacion">
-          <h5 class="tituloEvento">Catrinas </h5>
-          <p class="fechaEvento">29 Oct 2016 a las 19:00 hrs</p>
-          <p class="sedeEvento">La Pergola</p><small class="tipoEvento">Exposición</small>
-          <div class="organizadorEvento"><img class="organizadorEvento__imgPerfil imagen-fluida" src="images/luna.png"/>
-            <div class="organizadorEvento__nombre">Aula Clavijero</div>
-          </div>
-        </div>
-      </div>
-      <div class="tarjeta">
-        <div class="tarjeta__imagen"><img class="imagen-fluida" src="images/2.png"/></div>
-        <div class="tarjeta__informacion">
-          <h5 class="tituloEvento">Catrinas</h5>
-          <p class="fechaEvento">29 Oct 2016 a las 19:00 hrs</p>
-          <p class="sedeEvento">La Pergola</p><small class="tipoEvento">Exposición</small>
-          <div class="organizadorEvento"><img class="organizadorEvento__imgPerfil imagen-fluida" src="images/luna.png"/>
-            <div class="organizadorEvento__nombre">Aula Clavijero</div>
-          </div>
-        </div>
-      </div>
-      <div class="tarjeta">
-        <div class="tarjeta__imagen"><img class="imagen-fluida" src="images/3.jpg"/></div>
-        <div class="tarjeta__informacion">
-          <h5 class="tituloEvento">Catrinas</h5>
-          <p class="fechaEvento">29 Oct 2016 a las 19:00 hrs</p>
-          <p class="sedeEvento">La Pergola</p><small class="tipoEvento">Exposición</small>
-          <div class="organizadorEvento"><img class="organizadorEvento__imgPerfil imagen-fluida" src="images/luna.png"/>
-            <div class="organizadorEvento__nombre">Aula Clavijero</div>
-          </div>
-        </div>
-      </div>
-      <div class="tarjeta">
-        <div class="tarjeta__imagen"><img class="imagen-fluida" src="images/4.jpg"/></div>
-        <div class="tarjeta__informacion">
-          <h5 class="tituloEvento">Catrinas</h5>
-          <p class="fechaEvento">29 Oct 2016 a las 19:00 hrs</p>
-          <p class="sedeEvento">La Pergola</p><small class="tipoEvento">Exposición</small>
-          <div class="organizadorEvento"><img class="organizadorEvento__imgPerfil imagen-fluida" src="images/luna.png"/>
-            <div class="organizadorEvento__nombre">Aula Clavijero</div>
-          </div>
-        </div>
-      </div>
-      <div class="tarjeta">
-        <div class="tarjeta__imagen"><img class="imagen-fluida" src="images/5.jpg"/></div>
-        <div class="tarjeta__informacion">
-          <h5 class="tituloEvento">Catrinas</h5>
-          <p class="fechaEvento">29 Oct 2016 a las 19:00 hrs</p>
-          <p class="sedeEvento">La Pergola</p><small class="tipoEvento">Exposición</small>
-          <div class="organizadorEvento"><img class="organizadorEvento__imgPerfil imagen-fluida" src="images/luna.png"/>
-            <div class="organizadorEvento__nombre">Aula Clavijero</div>
+        <div class="tarjeta__contenedor">
+          <div class="tarjeta__imagen"><img class="imagen__evento imagen-fluida" src="images/1.jpg"/></div>
+          <div class="tarjeta__informacion">
+            <p class="tipoEvento">Exposición</p>
+            <P class="tituloEvento">Este Es el que Trabaja </P>
+            <p><span class="fechaEvento">29 Oct 2016 </span><small>&middot</small><span class="horaEvento">19:00 hrs</span></p>
+            <p class="sedeEvento">La Pergola</p>
+            <div class="organizadorEvento"><img class="organizadorEvento__imgPerfil imagen-fluida" src="images/luna.png"/>
+              <div class="organizadorEvento__nombre">Aula Clavijero</div>
+            </div>
           </div>
         </div>
       </div>
