Landing page--se modifico el css [menus] | Se creo el css Media Queries | Se modifico el navbar | Tamaños para móvil a: Inicio, Agora, Descubre, Explora, Comunica, Crea | Se modificaron los tamaños de Pie

--- a/agora_landing.html
+++ b/agora_landing.html
@@ -38,8 +38,12 @@
   <link href="css/normalize.css" rel="stylesheet"/>
   <!--Landing Page-->
   <link rel="stylesheet" href="css/agora-landingPage.css"/>
+  <!--Landing Page-->
+  <link rel="stylesheet" href="css/agora-style.css"/>
   <!--Framework Agora-->
   <link rel="stylesheet" href="css/agora-frameWork.css"/>
+  <!--Agora Media Queris-->
+  <link rel="stylesheet" href="css/agora-mediaQueries.css"/>
 </head>
 <body>
   <!--Barra de Navegación-->
