--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
   <link href="https://file.myfontastic.com/q2AGPeQ9fwKP9wnDdWcPfW/icons.css" rel="stylesheet"/>
   <!--Normalize-->
   <link href="css/normalize.css" rel="stylesheet"/>
-  <!--Landing Page-->
-  <link rel="stylesheet" href="css/agora-landingPage.css"/>
   <!--Agora Style-->
-  <link rel="stylesheet" href="css/agora_style.css"/>
+  <link rel="stylesheet" href="css/agora-style.css"/>
   <!--Style Modal-->
   <link rel="stylesheet" href="css/modal.css"/>
   <!--Agora FrameWork-->
   <link rel="stylesheet" href="css/agora-frameWork.css"/>
+  <!--Agora Media Queris-->
+  <link rel="stylesheet" href="css/agora-mediaQueries.css"/>
 </head>
 <body>
   <!--Barra de Navegación-->
