--- a/index.html
+++ b/index.html
@@ -74,12 +74,66 @@
         <div class="tarjeta__contenedor">
           <div class="tarjeta__imagen"><img class="imagen__evento imagen-fluida" src="images/1.jpg"/></div>
           <div class="tarjeta__informacion">
-            <p class="tipoEvento">Exposición</p>
-            <P class="tituloEvento">Este Es el que Trabaja </P>
-            <p><span class="fechaEvento">29 Oct 2016 </span><small>&middot</small><span class="horaEvento">19:00 hrs</span></p>
-            <p class="sedeEvento">La Pergola</p>
+            <p class="tipoEvento">Convocatoria</p>
+            <P class="tituloEvento">Programa Nacional de Teatro Escolar Veracruz 2017 </P>
+            <p><span class="fechaEvento">7 Jul 2017</span></p>
             <div class="organizadorEvento"><img class="organizadorEvento__imgPerfil imagen-fluida" src="images/luna.png"/>
-              <div class="organizadorEvento__nombre">Aula Clavijero</div>
+              <div class="organizadorEvento__nombre">Instituto Veracruzano de Cultura | IVEC</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="tarjeta__contenedor">
+          <div class="tarjeta__imagen"><img class="imagen__evento imagen-fluida" src="images/2.jpg"/></div>
+          <div class="tarjeta__informacion">
+            <p class="tipoEvento">Feria</p>
+            <P class="tituloEvento">Feria Nacional del Libro Infantil y Juvenil 2017 </P>
+            <p><span class="fechaEvento">21 Jul 2017 </span><small>&middot </small><span class="horaEvento">10:00 hrs</span></p>
+            <p class="sedeEvento">Colegio Preparatorio de Xalapa</p>
+            <div class="organizadorEvento"><img class="organizadorEvento__imgPerfil imagen-fluida" src="images/luna.png"/>
+              <div class="organizadorEvento__nombre">Instituto Veracruzano de Cultura | IVEC</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="tarjeta__contenedor">
+          <div class="tarjeta__imagen"><img class="imagen__evento imagen-fluida" src="images/3.jpg"/></div>
+          <div class="tarjeta__informacion">
+            <p class="tipoEvento">Curso</p>
+            <P class="tituloEvento">Curso de verano en parque Natura</P>
+            <p><span class="fechaEvento">17 Jul 2017 </span><small>&middot </small><span class="horaEvento">9:00 hrs</span></p>
+            <p class="sedeEvento">Parque Natura</p>
+            <div class="organizadorEvento"><img class="organizadorEvento__imgPerfil imagen-fluida" src="images/luna.png"/>
+              <div class="organizadorEvento__nombre">Candaana Viajes y Campamentos</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="tarjeta__contenedor">
+          <div class="tarjeta__imagen"><img class="imagen__evento imagen-fluida" src="images/4.jpg"/></div>
+          <div class="tarjeta__informacion">
+            <p class="tipoEvento">Curso</p>
+            <P class="tituloEvento">Mis vacaciones en la Biblioteca</P>
+            <p><span class="fechaEvento">24 Jul 2017 </span><small>&middot </small><span class="horaEvento">8:00 hrs</span></p>
+            <div class="organizadorEvento"><img class="organizadorEvento__imgPerfil imagen-fluida" src="images/luna.png"/>
+              <div class="organizadorEvento__nombre">Dirección de Cultura, Educación y Deporte Xalapa</div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="tarjeta">
+        <div class="tarjeta__contenedor">
+          <div class="tarjeta__imagen"><img class="imagen__evento imagen-fluida" src="images/5.jpg"/></div>
+          <div class="tarjeta__informacion">
+            <p class="tipoEvento">Ciclo de Cine</p>
+            <P class="tituloEvento">62 Muestra Internacional de Cine</P>
+            <p><span class="fechaEvento">24 Jul 2017 </span><small>&middot </small><span class="horaEvento">17:00 hrs</span></p>
+            <p class="sedeEvento">Ágora de la Ciudad</p>
+            <div class="organizadorEvento"><img class="organizadorEvento__imgPerfil imagen-fluida" src="images/luna.png"/>
+              <div class="organizadorEvento__nombre">Instituto Veracruzano de Cultura | IVEC</div>
             </div>
           </div>
         </div>
