Plataforma--Se modifico estilos de tarjeta [fechaEvento, horaEvento] | Margin top de contenedorTarjetasEventos

--- a/agora_landing.html
+++ b/agora_landing.html
@@ -163,10 +163,10 @@
   <section class="equipo flexBox__Row" id="equipo">
     <div class="equipo__perfil">
       <div class="equipo__imagen"></div>
-      <h3 class="weight300">Ramsés</h3>
+      <h3 class="weight300">Desarrolladora(o)</h3>
       <p class="weight300">Reseña</p>
       <div class="equipo__tags">
-        <div class="tag">Phyton</div>
+        <div class="tag">CSS</div>
         <div class="tag">Data Base</div>
       </div>
     </div>
