LandingPage--Se modifico la sección de equipo, alfa y Plataforma--Se modifico la visualización de la información del evento para ser responsive aplicando [display: node;] a dispositivos móviles Modal--Se creo el esqueleto

--- a/agora_landing.html
+++ b/agora_landing.html
@@ -87,7 +87,7 @@
     </h1>
   </section>
   <!--SECCIÓN ALFA-->
-  <section class="flexBox__Row alfa" id="alfa">
+  <section class="alfa flexRow" id="alfa">
     <div>
       <h4>Fase Alfa +</h4>
     </div>
@@ -95,8 +95,8 @@
   <!--SECCIÓN DESCUBRE-->
   <section class="descubre flexBox__Row" id="descubre">
     <div class="descubre__info moduloIzq">
-      <h2 class="nombre--seccion">Descubre</h2>
-      <p class="informacion--seccion">ágora te muestra las actividades culturales y de entretenimiento a realizarse, dejando atrás la forma aburrida de buscar entre carteleras con eventos atrasados.</p>
+      <h2 class="nombre__seccion">Descubre</h2>
+      <p class="informacion__seccion">ágora te muestra las actividades culturales y de entretenimiento a realizarse, dejando atrás la forma aburrida de buscar entre carteleras con eventos atrasados.</p>
     </div>
     <div class="descubre__imagen moduloDer"></div>
   </section>
@@ -104,28 +104,28 @@
   <section class="explora flexBox__Row" id="explora">
     <div class="explora__imagen moduloIzq"></div>
     <div class="explora__info moduloDer">
-      <h2 class="nombre--seccion">
+      <h2 class="nombre__seccion">
          Explora<sup><i class="icon-info"></i></sup></h2>
-      <p class="subNombre--seccion"><em>Tres modos de exploración</em></p>
+      <p class="subnombre__seccion"><em>Tres modos de exploración</em></p>
       <div>
-        <p class="items--seccion icon-buscar">Buscar </p>
-        <p class="informacion--seccion">Encuentra eventos mediante la barra de búsqueda utilizando palabras claves, perfecto para cuando buscas algo específico.</p>
+        <p class="items__seccion icon-buscar">Buscar </p>
+        <p class="informacion__seccion">Encuentra eventos mediante la barra de búsqueda utilizando palabras claves, perfecto para cuando buscas algo específico.</p>
       </div>
       <div>
-        <p class="items--seccion icon-categorias">Categorías</p>
-        <p class="informacion--seccion">Funciona como un índice general para navegar entre los tipos de eventos y encontrar así lo que buscas.</p>
+        <p class="items__seccion icon-categorias">Categorías</p>
+        <p class="informacion__seccion">Funciona como un índice general para navegar entre los tipos de eventos y encontrar así lo que buscas.</p>
       </div>
       <div>
-        <p class="items--seccion icon-fecha">Ciudad y Fecha</p>
-        <p class="informacion--seccion">Muestra los eventos filtrados por la localización (ciudad, sede) y fecha en que se realizan.</p>
+        <p class="items__seccion icon-fecha">Ciudad y Fecha</p>
+        <p class="informacion__seccion">Muestra los eventos filtrados por la localización (ciudad, sede) y fecha en que se realizan.</p>
       </div>
     </div>
   </section>
   <!--SECCIÓN COMUNICA-->
   <section class="comunica flexBox__Row" id="comunica">
     <div class="comunica__info moduloIzq"> 
-      <h2 class="nombre--seccion">Comunica</h2>
-      <p class="informacion--seccion">Diseñamos el espacio estupendo para tú evento, enfocando ágora para ofrecerte una plataforma especializada en difundir tu evento, en la cual podrás conectar con tus próximos asistentes.</p>
+      <h2 class="nombre__seccion">Comunica</h2>
+      <p class="informacion__seccion">Diseñamos el espacio estupendo para tú evento, enfocando ágora para ofrecerte una plataforma especializada en difundir tu evento, en la cual podrás conectar con tus próximos asistentes.</p>
     </div>
     <div class="comunica__imagen moduloDer"></div>
   </section>
@@ -133,66 +133,69 @@
   <section class="crea flexBox__Row" id="crea">
     <div class="crea__imagen moduloIzq"></div>
     <div class="crea__info moduloDer">
-      <h2 class="nombre--seccion">
+      <h2 class="nombre__seccion">
          Crea<sup><i class="icon-info"></i></sup></h2>
-      <p class="informacion--seccion">La plataforma está dirigida para todos los eventos, por eso utiliza una interfaz intuitiva que permite crear un nuevo evento, modificar su información, cancelar o eliminar y notificarlo a los usuarios.</p>
-      <p class="informacion--seccion">Así los organizadores tienen la libertad de subir a la plataforma todos sus eventos sin restricción alguna en cantidad o información.</p>
+      <p class="informacion__seccion">La plataforma está dirigida para todos los eventos, por eso utiliza una interfaz intuitiva que permite crear un nuevo evento, modificar su información, cancelar o eliminar y notificarlo a los usuarios.</p>
+      <p class="informacion__seccion">Así los organizadores tienen la libertad de subir a la plataforma todos sus eventos sin restricción alguna en cantidad o información.</p>
     </div>
   </section>
   <!--SECCIÓN Boletos-->
   <section class="boletos flexBox__Row" id="boletos">
     <div class="boletos__titulo"></div>
     <div class="moduloIzq">
-      <h2 class="nombre--seccion"><span class="small">a un click de tus</span><strong> boletos</strong></h2>
-      <p class="informacion--seccion">Dirige a tus usuarios hacia la plataforma que utilizas, y en donde ellos podran adquirir los accesos de tu evento.</p>
-      <p class="informacion--seccion">Al crear el espacio de tu evento, ágora te permite ingresar el link que te proproporciona tu servicio de boletaje, o la dirección del sitio web donde pueden encontrarlos.</p>
+      <h2 class="nombre__seccion"><span class="small">a un click de tus</span><strong> boletos</strong></h2>
+      <p class="informacion__seccion">Dirige a tus usuarios hacia la plataforma que utilizas, y en donde ellos podran adquirir los accesos de tu evento.</p>
+      <p class="informacion__seccion">Al crear el espacio de tu evento, ágora te permite ingresar el link que te proproporciona tu servicio de boletaje, o la dirección del sitio web donde pueden encontrarlos.</p>
     </div>
     <div class="moduloDer"></div>
   </section>
   <section class="boletos flexBox__Row" id="boletos">
     <div class="moduloIzq"> </div>
     <div class="moduloDer">
-      <p class="informacion--seccion">La plataforma te permite también indicarle a tus usuarios si  el acceso a tu evento no tiene un precio</p>
+      <p class="informacion__seccion">La plataforma te permite también indicarle a tus usuarios si  el acceso a tu evento no tiene un precio</p>
     </div>
   </section>
   <!--SECCIÓN go to ágora-->
   <section class="goToAgora flexBox__Column" id="gotoAgora"><img class="agora--imagen imagen-fluida" src="images/agora.svg"/>
     <div class="boton blanco" href="index.html">Explorar</div>
   </section>
-  <!--SECCIÓN EQUIPO-->
-  <section class="equipo flexBox__Row" id="equipo">
-    <div class="equipo__perfil">
-      <div class="equipo__imagen"></div>
-      <h3 class="weight300">Desarrolladora(o)</h3>
-      <p class="weight300">Reseña</p>
-      <div class="equipo__tags">
-        <div class="tag">CSS</div>
-        <div class="tag">Data Base</div>
+  <!--SECCIÓN Equipo-->
+  <section class="equipo flexBox__Column" id="equipo">
+    <h2><span class="weight100">ágora </span><span class="weight300">team</span></h2>
+    <div class="equipo__tarjetas">
+      <div class="equipo__perfil">
+        <div class="equipo__marcoImagen"><img class="equipo__imagen" src="images/perfil_integrante.svg"/></div>
+        <h3 class="nombre__integrante"> <span class="weight400">Socio </span><span class="weight100">Desarrollador</span></h3>
+        <p class="descripcion__integrante">Reseña</p>
+        <div class="equipo__tags">
+          <div class="tag">CSS</div>
+          <div class="tag">Data Base</div>
+        </div>
       </div>
-    </div>
-    <div class="equipo__perfil">
-      <div class="equipo__imagen"></div>
-      <h3 class="weight300">Ingrid</h3>
-      <p class="weight300">Reseña</p>
-      <div class="equipo__tags">
-        <div class="tag">Public Relation</div>
-        <div class="tag">Comunnity Manager</div>
+      <div class="equipo__perfil">
+        <div class="equipo__marcoImagen"><img class="equipo__imagen" src="images/perfil_integrante.svg"/></div>
+        <h3 class="nombre__integrante"> <span class="weight400">Ingrid </span><span class="weight100">Rguez</span></h3>
+        <p class="descripcion__integrante">Reseña</p>
+        <div class="equipo__tags">
+          <div class="tag">Public Relation</div>
+          <div class="tag">Comunnity Manager</div>
+        </div>
       </div>
-    </div>
-    <div class="equipo__perfil">
-      <div class="equipo__imagen"></div>
-      <h3 class="weight300">Kalollero</h3>
-      <p class="weight300">Loco, Gitano, Soñador & Startopero; con estudios en Imagología y Diseño. Un publicista art nouvo de épocas contemporaneas, experto en Vampiras Modernas.</p>
-      <div class="equipo__tags">
-        <div class="tag">UX Desing</div>
-        <div class="tag">HTML</div>
-        <div class="tag">FrontEnd</div>
-        <div class="tag">CSS</div>
-        <div class="tag">Advertising</div>
-        <div class="tag">JavaScript</div>
-        <div class="tag">Desing</div>
-        <div class="tag">Prototyping</div>
-        <div class="tag">UI Desing</div>
+      <div class="equipo__perfil">
+        <div class="equipo__marcoImagen"><img class="equipo__imagen" src="images/perfil_integrante.svg"/></div>
+        <h3 class="nombre__integrante"> <span class="weight400">Kalóllero </span><span class="weight100">Marro.on</span></h3>
+        <p class="descripcion__integrante">Loco, Gitano, Soñador & Startopero; con estudios en Imagología y Diseño. Un publicista art nouvo de épocas contemporaneas, experto en Vampiras Modernas.</p>
+        <div class="equipo__tags">
+          <div class="tag">UX Desing</div>
+          <div class="tag">HTML</div>
+          <div class="tag">FrontEnd</div>
+          <div class="tag">CSS</div>
+          <div class="tag">Advertising</div>
+          <div class="tag">JavaScript</div>
+          <div class="tag">Desing</div>
+          <div class="tag">Prototyping</div>
+          <div class="tag">UI Desing</div>
+        </div>
       </div>
     </div>
   </section>
