--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="tarjeta__informacion">
             <p class="tipoEvento">Feria</p>
             <P class="tituloEvento">Feria Nacional del Libro Infantil y Juvenil 2017 </P>
-            <p><span class="fechaEvento">21 Jul 2017 </span><small>&middot </small><span class="horaEvento">10:00 hrs</span></p>
+            <p><span class="fechaEvento">21 Jul 2017</span><small class="punto">&nbsp &middot &nbsp </small><span class="horaEvento">10:00 hrs</span></p>
             <p class="sedeEvento">Colegio Preparatorio de Xalapa</p>
             <div class="organizadorEvento"><img class="organizadorEvento__imgPerfil imagen-fluida" src="images/luna.png"/>
               <div class="organizadorEvento__nombre">Instituto Veracruzano de Cultura | IVEC</div>
@@ -103,7 +103,7 @@
           <div class="tarjeta__informacion">
             <p class="tipoEvento">Curso</p>
             <P class="tituloEvento">Curso de verano en parque Natura</P>
-            <p><span class="fechaEvento">17 Jul 2017 </span><small>&middot </small><span class="horaEvento">9:00 hrs</span></p>
+            <p><span class="fechaEvento">17 Jul 2017</span><small class="punto">&nbsp &middot &nbsp </small><span class="horaEvento">9:00 hrs</span></p>
             <p class="sedeEvento">Parque Natura</p>
             <div class="organizadorEvento"><img class="organizadorEvento__imgPerfil imagen-fluida" src="images/luna.png"/>
               <div class="organizadorEvento__nombre">Candaana Viajes y Campamentos</div>
@@ -117,7 +117,7 @@
           <div class="tarjeta__informacion">
             <p class="tipoEvento">Curso</p>
             <P class="tituloEvento">Mis vacaciones en la Biblioteca</P>
-            <p><span class="fechaEvento">24 Jul 2017 </span><small>&middot </small><span class="horaEvento">8:00 hrs</span></p>
+            <p><span class="fechaEvento">24 Jul 2017</span><small class="punto">&nbsp &middot &nbsp </small><span class="horaEvento">8:00 hrs</span></p>
             <div class="organizadorEvento"><img class="organizadorEvento__imgPerfil imagen-fluida" src="images/luna.png"/>
               <div class="organizadorEvento__nombre">Dirección de Cultura, Educación y Deporte Xalapa</div>
             </div>
@@ -130,7 +130,7 @@
           <div class="tarjeta__informacion">
             <p class="tipoEvento">Ciclo de Cine</p>
             <P class="tituloEvento">62 Muestra Internacional de Cine</P>
-            <p><span class="fechaEvento">24 Jul 2017 </span><small>&middot </small><span class="horaEvento">17:00 hrs</span></p>
+            <p><span class="fechaEvento">24 Jul 2017</span><small class="punto">&nbsp &middot &nbsp</small><span class="horaEvento">17:00 hrs</span></p>
             <p class="sedeEvento">Ágora de la Ciudad</p>
             <div class="organizadorEvento"><img class="organizadorEvento__imgPerfil imagen-fluida" src="images/luna.png"/>
               <div class="organizadorEvento__nombre">Instituto Veracruzano de Cultura | IVEC</div>
