--- a/modal.html
+++ b/modal.html
@@ -45,4 +45,9 @@
   <!--Agora Media Queris-->
   <link rel="stylesheet" href="css/agora-mediaQueries.css"/>
 </head>
-<body></body>
+<body>
+  <div class="contenedor__modal">
+    <div class="imagen__eventoModal"><img/></div>
+    <div class="informacion__eventoModal"></div>
+  </div>
+</body>
