Modal--Se modifico estilo y contenido falta de contenido iconos e redes sociales y perfil de organizador

--- a/modal.html
+++ b/modal.html
@@ -36,18 +36,29 @@
   <link href="https://file.myfontastic.com/q2AGPeQ9fwKP9wnDdWcPfW/icons.css" rel="stylesheet"/>
   <!--Normalize-->
   <link href="css/normalize.css" rel="stylesheet"/>
-  <!--Agora Style-->
-  <link rel="stylesheet" href="css/agora-style.css"/>
-  <!--Style Modal-->
-  <link rel="stylesheet" href="css/modal.css"/>
+  <!--Style modal-->
+  <link rel="stylesheet" href="css/agora-modal.css"/>
   <!--Agora FrameWork-->
   <link rel="stylesheet" href="css/agora-frameWork.css"/>
   <!--Agora Media Queris-->
-  <link rel="stylesheet" href="css/agora-mediaQueries.css"/>
 </head>
 <body>
   <div class="contenedor__modal">
-    <div class="imagen__eventoModal"><img/></div>
-    <div class="informacion__eventoModal"></div>
+    <div class="imagenEvento__modal"><img class="cartel__modal" src="images/2.jpg"/></div>
+    <div class="informacionEvento__modal">
+      <p class="tipoEvento__modal">Feria</p>
+      <p class="nombreEvento__modal">Feria Nacional del Libro Infantil y Juvenil 2017</p>
+      <p class="fechaEvento__modal"><span>21 de Julio 2017</span><span>&nbsp al &nbsp</span><span>30 de Julio 2017</span></p>
+      <p class="horaEvento__modal"><span>10:00 hrs</span><span>&nbsp a &nbsp</span><span>20:00 hrs</span></p>
+      <div class="descripcionEvento__modal">Descripción del Evento</div>
+      <div class="accesoEvento__modal">Acceso Libre</div>
+      <p class="sedeEvento__modal">Colegio Preparatorio de Xalapa</p>
+      <p class="direccionEvento__modal">Dirección de la Sede</p>
+      <p class="ciudadEvento__modal">Xalapa~Enríquez</p>
+      <div class="organizador__modal"><img class="organizadorEventoImgPerfil__modal" src="images/luna.png"/>
+        <p class="organizadorEventoNombre__modal">Instituto Veracruzano de Cultura | IVEC</p>
+      </div>
+      <div class="redesSociales__modal"><a href=""><i class="icon-"></i></a><a href=""><i class="icon-"></i></a><a href=""><i class="icon-"></i></a><a href=""><i class="icon-"></i></a><a href=""><i class="icon-"></i></a></div>
+    </div>
   </div>
 </body>
