Modal--integración del modelo de layout Grit para realizar modal base

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
   <link href="css/normalize.css" rel="stylesheet"/>
   <!--Agora Style-->
   <link rel="stylesheet" href="css/agora-style.css"/>
-  <!--Style Modal-->
-  <link rel="stylesheet" href="css/modal.css"/>
+  <!--Style modal-->
+  <link rel="stylesheet" href="css/agora-modal.css"/>
   <!--Agora FrameWork-->
   <link rel="stylesheet" href="css/agora-frameWork.css"/>
   <!--Agora Media Queris-->
