--- a/modal.html
+++ b/modal.html
@@ -41,24 +41,28 @@
   <!--Agora FrameWork-->
   <link rel="stylesheet" href="css/agora-frameWork.css"/>
   <!--Agora Media Queris-->
+  <!--Style modal-->
+  <link rel="stylesheet" href="css/grid.css"/>
 </head>
 <body>
-  <div class="contenedor__modal">
-    <div class="imagenEvento__modal"><img class="cartel__modal" src="images/2.jpg"/></div>
-    <div class="informacionEvento__modal">
-      <p class="tipoEvento__modal">Feria</p>
-      <p class="nombreEvento__modal">Feria Nacional del Libro Infantil y Juvenil 2017</p>
-      <p class="fechaEvento__modal"><span>21 de Julio 2017</span><span>&nbsp al &nbsp</span><span>30 de Julio 2017</span></p>
-      <p class="horaEvento__modal"><span>10:00 hrs</span><span>&nbsp a &nbsp</span><span>20:00 hrs</span></p>
-      <div class="descripcionEvento__modal">Descripción del Evento</div>
-      <div class="accesoEvento__modal">Acceso Libre</div>
-      <p class="sedeEvento__modal">Colegio Preparatorio de Xalapa</p>
-      <p class="direccionEvento__modal">Dirección de la Sede</p>
-      <p class="ciudadEvento__modal">Xalapa~Enríquez</p>
-      <div class="organizador__modal"><img class="organizadorEventoImgPerfil__modal" src="images/luna.png"/>
-        <p class="organizadorEventoNombre__modal">Instituto Veracruzano de Cultura | IVEC</p>
+  <div class="contenedor">
+    <div class="contenedor__modal">
+      <div class="imagenEvento__modal"><img class="cartel__modal" src="images/5.jpg"/></div>
+      <div class="informacionEvento__modal">
+        <p class="tipoEvento__modal">Feria</p>
+        <p class="nombreEvento__modal">Feria Nacional del Libro Infantil y Juvenil 2017</p>
+        <p class="fechaEvento__modal"><span>21 de Julio 2017</span><span>&nbsp al &nbsp</span><span>30 de Julio 2017</span></p>
+        <p class="horaEvento__modal"><span>10:00 hrs</span><span>&nbsp a &nbsp</span><span>20:00 hrs</span></p>
+        <div class="descripcionEvento__modal">Descripción del Evento</div>
+        <div class="accesoEvento__modal">Acceso Libre</div>
+        <p class="sedeEvento__modal">Colegio Preparatorio de Xalapa</p>
+        <p class="direccionEvento__modal">Dirección de la Sede</p>
+        <p class="ciudadEvento__modal">Xalapa~Enríquez</p>
+        <div class="organizador__modal"><img class="organizadorEventoImgPerfil__modal" src="images/luna.png"/>
+          <p class="organizadorEventoNombre__modal">Instituto Veracruzano de Cultura | IVEC</p>
+        </div>
+        <div class="redesSociales__modal"><a class="tooltip-top" href="" data-tooltip="Tooltip Facebook"><i class="icon-facebook icono-modal"></i></a><a class="tooltip-top" href="" data-tooltip="Tooltip Twitter"><i class="icon-twitter icono-modal"></i></a><a class="tooltip-top" href="" data-tooltip="Tooltip Instagram"><i class="icon-instagram icono-modal"></i></a><a class="tooltip-top" href="" data-tooltip="Tooltip Teléfono"><i class="icon-telefono icono-modal"></i></a><a class="tooltip-top" href="" data-tooltip="Tooltip Dirección"><i class="icon-direccion icono-modal"></i></a></div>
       </div>
-      <div class="redesSociales__modal"><a href=""><i class="icon-"></i></a><a href=""><i class="icon-"></i></a><a href=""><i class="icon-"></i></a><a href=""><i class="icon-"></i></a><a href=""><i class="icon-"></i></a></div>
     </div>
   </div>
 </body>
