Modal--Se modifico el estilo utilizado layout grid

--- a/agora_landing.html
+++ b/agora_landing.html
@@ -44,6 +44,8 @@
   <link rel="stylesheet" href="css/agora-frameWork.css"/>
   <!--Agora Media Queris-->
   <link rel="stylesheet" href="css/agora-mediaQueries.css"/>
+  <!--Agora Media Queris-->
+  <link rel="stylesheet" href="css/grid.css"/>
 </head>
 <body>
   <!--Barra de Navegación-->
@@ -163,29 +165,31 @@
   <section class="equipo flexBox__Column" id="equipo">
     <h2><span class="weight100">ágora </span><span class="weight300">team</span></h2>
     <div class="equipo__tarjetas">
-      <div class="equipo__perfil">
+      <div class="jose equipo__perfil">
         <div class="equipo__marcoImagen"><img class="equipo__imagen" src="images/perfil_integrante.svg"/></div>
-        <h3 class="nombre__integrante"> <span class="weight400">Socio </span><span class="weight100">Desarrollador</span></h3>
-        <p class="descripcion__integrante">Reseña</p>
-        <div class="equipo__tags">
+        <div class="informacion__integrante">
+          <h3 class="nombre__integrante"><span class="weight400">Socio </span><span class="weight100">Desarrollador</span></h3>
+          <p class="descripcion__integrante">Reseña</p>
+        </div>
+        <div class="tags__integrante">
           <div class="tag">CSS</div>
           <div class="tag">Data Base</div>
         </div>
       </div>
-      <div class="equipo__perfil">
+      <div class="ingrid equipo__perfil">
         <div class="equipo__marcoImagen"><img class="equipo__imagen" src="images/perfil_integrante.svg"/></div>
         <h3 class="nombre__integrante"> <span class="weight400">Ingrid </span><span class="weight100">Rguez</span></h3>
         <p class="descripcion__integrante">Reseña</p>
-        <div class="equipo__tags">
+        <div class="tags__integrante">
           <div class="tag">Public Relation</div>
           <div class="tag">Comunnity Manager</div>
         </div>
       </div>
-      <div class="equipo__perfil">
+      <div class="kalollero equipo__perfil">
         <div class="equipo__marcoImagen"><img class="equipo__imagen" src="images/perfil_integrante.svg"/></div>
         <h3 class="nombre__integrante"> <span class="weight400">Kalóllero </span><span class="weight100">Marro.on</span></h3>
         <p class="descripcion__integrante">Loco, Gitano, Soñador & Startopero; con estudios en Imagología y Diseño. Un publicista art nouvo de épocas contemporaneas, experto en Vampiras Modernas.</p>
-        <div class="equipo__tags">
+        <div class="tags__integrante">
           <div class="tag">UX Desing</div>
           <div class="tag">HTML</div>
           <div class="tag">FrontEnd</div>
