--- a/grid.html
+++ b/grid.html
@@ -9,12 +9,44 @@
   <link rel="stylesheet" href="css/grid.css"/>
 </head>
 <body>
-  <div class="contenedor__modal">
-    <div class="imagenEvento__modal">
-      <p>imagen</p>
+  <!--SECCIÓN Equipo-->
+  <section class="equipo flexBox__Column" id="equipo">
+    <h2><span class="weight100">ágora </span><span class="weight300">team</span></h2>
+    <div class="equipo__tarjetas">
+      <div class="jose equipo__perfil">
+        <div class="equipo__marcoImagen"><img class="equipo__imagen" src="images/perfil_integrante.svg"/></div>
+        <h3 class="nombre__integrante"> <span class="weight400">Socio </span><span class="weight100">Desarrollador</span></h3>
+        <p class="descripcion__integrante">Reseña</p>
+        <div class="equipo__tags">
+          <div class="tag">CSS</div>
+          <div class="tag">Data Base</div>
+        </div>
+      </div>
+      <div class="ingrid equipo__perfil">
+        <div class="equipo__marcoImagen"><img class="equipo__imagen" src="images/perfil_integrante.svg"/></div>
+        <h3 class="nombre__integrante"> <span class="weight400">Ingrid </span><span class="weight100">Rguez</span></h3>
+        <p class="descripcion__integrante">Reseña</p>
+        <div class="equipo__tags">
+          <div class="tag">Public Relation</div>
+          <div class="tag">Comunnity Manager</div>
+        </div>
+      </div>
+      <div class="kalollero equipo__perfil">
+        <div class="equipo__marcoImagen"><img class="equipo__imagen" src="images/perfil_integrante.svg"/></div>
+        <h3 class="nombre__integrante"> <span class="weight400">Kalóllero </span><span class="weight100">Marro.on</span></h3>
+        <p class="descripcion__integrante">Loco, Gitano, Soñador & Startopero; con estudios en Imagología y Diseño. Un publicista art nouvo de épocas contemporaneas, experto en Vampiras Modernas.</p>
+        <div class="equipo__tags">
+          <div class="tag">UX Desing</div>
+          <div class="tag">HTML</div>
+          <div class="tag">FrontEnd</div>
+          <div class="tag">CSS</div>
+          <div class="tag">Advertising</div>
+          <div class="tag">JavaScript</div>
+          <div class="tag">Desing</div>
+          <div class="tag">Prototyping</div>
+          <div class="tag">UI Desing</div>
+        </div>
+      </div>
     </div>
-    <div class="informacionEvento__modal">
-      <p>info</p>
-    </div>
-  </div>
+  </section>
 </body>
